--- a/src/style.css
+++ b/src/style.css
@@ -28,3 +28,226 @@
 .link-light {
   color: #fff;
 }
+
+.app {
+  overflow: hidden;
+  height: 100vh;
+  display: flex;
+  color: white;
+  background-color: #020230;
+}
+
+.main {
+  flex: 3;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230),
+    url("./assets/bg.jpg") center;
+  display: flex;
+  flex-direction: column;
+  background-size: cover;
+}
+
+/* Start Pyramid */
+
+.pyramid {
+  overflow: scroll;
+  padding: 0;
+  flex: 1;
+  background-color: #020230;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.moneyList {
+  padding: 20px;
+  list-style: none;
+  width: 100%;
+}
+
+.moneyListItem {
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  padding: 15px 10px;
+}
+
+.moneyListItem.active {
+  background-color: teal;
+}
+
+.moneyListItemNumber {
+  width: 30%;
+  font-size: 18px;
+  font-weight: 100;
+}
+
+.moneyListItemAmount {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+/* End Pyramid */
+
+/* Trivia */
+
+.top {
+  height: 30%;
+  position: relative;
+}
+
+.timer {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 5px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 10px;
+  left: 110px;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.bottom {
+  height: 60%;
+}
+
+.trivia {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.question {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background: linear-gradient(#100241, black);
+  text-align: center;
+  padding: 30px;
+  border-radius: 10px;
+  border: 2px solid white;
+  font-size: 20px;
+}
+
+.answers {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.answer {
+  width: 40%;
+  padding: 18px 8px;
+  margin: 0 10px 20px 10px;
+  text-align: center;
+  background: linear-gradient(#0e0124, #22074d);
+  border: 1px solid white;
+  border-radius: 15px;
+  font-weight: 300;
+  font-size: 20px;
+  cursor: pointer;
+  color: white;
+}
+
+.answer:hover,
+.answer.active {
+  background: mediumblue;
+}
+
+.answer.correct {
+  animation: correct 3s ease forwards;
+}
+
+@keyframes correct {
+  0%,
+  22%,
+  42% {
+    background: mediumblue;
+  }
+  20%,
+  40%,
+  60% {
+    background: linear-gradient(#0e0124, #22074d);
+  }
+  62%,
+  100% {
+    background: green;
+  }
+}
+
+.answer.wrong {
+  animation: wrong 3s ease forwards;
+}
+
+@keyframes wrong {
+  0%,
+  22%,
+  42% {
+    background: mediumblue;
+  }
+  20%,
+  40%,
+  60% {
+    background: linear-gradient(#0e0124, #22074d);
+  }
+  62%,
+  100% {
+    background: crimson;
+  }
+}
+
+/* End Trivia */
+
+.earnedMoney {
+  background-color: rgb(32, 18, 104);
+  position: relative;
+  padding: 50px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+/* Start */
+
+.start {
+  width: 400px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  padding: 100px;
+  margin: auto;
+}
+
+.startInput {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 100px;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 25px;
+  margin-bottom: 50px;
+}
+
+.startInput:focus {
+  outline: none;
+}
+
+.startButton {
+  text-transform: uppercase;
+  width: 100%;
+  height: 100px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: 500;
+}
