--- a/src/style.css
+++ b/src/style.css
@@ -18,16 +18,6 @@
   margin: 0 auto;
 }
 
-.link {
-  cursor: pointer;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: black;
-}
-
-.link-light {
-  color: #fff;
-}
 .app {
   overflow: hidden;
   height: 100vh;
@@ -57,4 +47,94 @@
 
 .bottom {
   height: 60%;
+}
+
+.startButton {
+  text-transform: uppercase;
+  width: 100%;
+  height: 100px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.earnedMoney {
+  background-color: rgb(32, 18, 104);
+  position: relative;
+  padding: 50px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.timer {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 5px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 10px;
+  left: 110px;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.prizeList {
+  overflow: scroll;
+  padding: 0;
+  flex: 1;
+  background-color: #020230;
+  display: flex;
+  justify-content: center;
+
+  @media screen and (max-width: 1200px) {
+    order: -1;
+  }
+}
+
+.moneyList {
+  padding: 20px;
+  list-style: none;
+  width: 100%;
+  display: grid;
+  @media screen and (min-width: 576px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (min-width: 768) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media screen and (min-width: 992px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media screen and (min-width: 1200px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.moneyListItem {
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  padding: 15px 10px;
+}
+
+.moneyListItem.active {
+  background-color: teal;
+}
+
+.moneyListItemNumber {
+  width: 30%;
+  font-size: 18px;
+  font-weight: 100;
+}
+
+.moneyListItemAmount {
+  font-size: 20px;
+  font-weight: 300;
 }
